--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ filelock==3.0.12
 gunicorn==20.0.4
 importlib-metadata==3.3.0
 ipykernel==5.4.2
-ipython==7.19.0
+ipython
 ipython-genutils==0.2.0
 isort==5.7.0
 jedi==0.17.0
